portfolio/src/Components/css/Desktop.css
html,
body {
  height: 100vh;
  overflow: hidden;
}

.contentDiv {
  width: 100%;
  height: 100vh;
  overflow-x: scroll;
  overflow-y: hidden;
  scroll-snap-type: x mandatory;
}

.content-group > .row {
  display: block;
  overflow-x: auto;
  white-space: nowrap;
}

.content-group > .row > .col {
  display: inline-block;
}

.right-container section {
  height: 100vh;
  overflow-x: hidden;
  overflow-y: scroll;
  scroll-snap-align: start;
}

.myPic {
  height: 100vh;
}

.header_link {
  padding: 20px;
  color: #314d4a;
  font-weight: bold;
  border: none;
  border-bottom: 3px solid transparent;
  cursor: pointer;
  outline: none;
}

.selected {
  border-bottom: 3px solid #11bb9a;
  color: #11bb9a;
}

#Home {
  background-color: #a388e8;
}

#Services {
  background-color: #f4769e;
}

#Skills {
  background-color: #8face0;
}

#Portfolio {
  background-color: #071530;
}

#Contact {
  background-color: #c7ff88;
}

.is-active {
  background-color: red;
}

.no-gutters {
  margin-right: 0;
  margin-left: 0;

  > .col,
  > [class*="col-"] {
    padding-right: 0;
    padding-left: 0;
  }
}

@media screen and (max-width: 1200px) {
  picture > img {
    height: 100vh !important;
    -o-object-fit: cover;
    object-fit: cover;
  }
}

